force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>An &quot;Invoice&quot; object serves as a formal document in real estate transactions, outlining the financial obligations and details of services rendered or property-related expenses. It typically includes information such as the names of involved parties, a description of services or products, the associated property or transaction, the invoice amount, payment terms, and a due date. In the real estate industry, invoices are used to request and track payments for services provided, such as agent commissions, property maintenance, or other transaction-related expenses. The Invoice object is essential for financial record-keeping, ensuring transparency and facilitating efficient payment processing in real estate transactions.</description>
    <label>Invoice for Buyers</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Invoice Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>