force-app/main/default/objects/Invoice__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>