force-app/main/default/objects/Invoice__c/fields/Full_Payment__c.field-meta.xml
<CustomField>
    <fullName>Full_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Payment</label>
    <type>Checkbox</type>
</CustomField>