force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Listing__c</columns>
    <columns>Amount__c</columns>
    <columns>Broker__c</columns>
    <columns>Buyer__c</columns>
    <columns>Full_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>